[package]
name = "st7735"
description = "Rust library for displays using the ST7735 driver"
version = "0.1.0"
authors = ["Anna Scholtz <anna@scholtzan.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/scholtzan/st7735-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735"

[dependencies]
embedded-hal = "0.2.2"
num-traits = "0.2"
num-derive = "0.2"
num = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2.2"
